test/shouldPass/vonVolker/test06.pas
program test06;
var
    x,y,z: integer;
    u : integer;
    v : string = 'hi';

function hi(a , b : integer; c, d : string; g : boolean): integer;
var
    i : integer;
begin
    i := b +5;
    hi := x;
end;

begin

    x := z;

end.