test/shouldFail/expr/modBool.pas
program Sample;
var
  x, y: boolean;
begin
  writeln(x mod y);
//        ^^^^^^^
// Operator 'mod' cannot be applied to boolean and boolean
end.
